--- a/index.html
+++ b/index.html
@@ -5,26 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
-  <style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
 </head>
 <body>
-<a href="summary.html"> </a>
+<a href="summary.html"> alt="Nalini Ratha" </a>
 
 <img src="images/nalini_face.jpg" alt="Nalini Ratha" width="150" height="150"> 
 
@@ -58,10 +42,6 @@ ACM Distinguished Scientist.
 His current research interests include biometrics, computer vision, pattern recognition and special purpose architecture for computer vision systems. 
 In 2019, he won the IEEE Biometrics Council Leadership award. 
 </p>
-
-
-
-<p> Contact me: nalini dot ratha at gmail dot com </p>
 
 <p>
 <a href="education.html">  
@@ -106,6 +86,6 @@ In 2019, he won the IEEE Biometrics Council Leadership award.
 
 </p>
 
-
+<p> Contact me: nalini dot ratha at gmail dot com </p>
 </body>  
 </html>
