--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-    <img class="container__image" src="images/nalini_face.jpg" alt="Nalini Ratha" width="150" height="150"/>
+    <img class="container__image" src="images/nalini_face.jpg" ALIGN="LEFT" alt="Nalini Ratha" width="150" height="150"/>
     <div class="container__text">
         <h2>Summary</h2>
         <p>Nalini K. Ratha is a Research Staff Member at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York where he lead the biometrics 
