--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
-
+<style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
+  .centered-block {
+  display: block;
+  margin: auto;
+  max-height: 500px;
+  max-width: 500px;
+}
+</style>
 </head>
 <body>
+<div class="content-wrapper">
 <p>
-    <img class="container__image" src="images/nalini_face.jpg" ALIGN="LEFT" alt="Nalini Ratha" width="150" height="150"/>
+
+    <img  src="images/nalini_face.jpg" ALIGN="LEFT" alt="Nalini Ratha" width="150" height="150"/>
         <h2>Summary</h2>
        <p> Nalini K. Ratha is a Research Staff Member at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York where he lead the biometrics 
 research effort in the area of enhancing security of biometrics systems and performance evaluation of biometrics systems. 
@@ -89,5 +99,6 @@ In 2019, he won the IEEE Biometrics Council Leadership award.
 </p>
 
 <p> Contact me: nalini dot ratha at gmail dot com </p>
+  </div><!-- .content-wrapper -->
 </body>  
 </html>
