--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ In 2019, he won the IEEE Biometrics Council Leadership award.
 </p>
 
 </p>
-
+<h4> Please visit the sections below describing details of education, exerience, projects and publications. </h4>
 <div class="grid-container">
   <div><a href="education.html">  
 <img src="images/education.jpg" alt="Education" width="300">
@@ -99,50 +99,9 @@ In 2019, he won the IEEE Biometrics Council Leadership award.
 </a> </div>
 </div>
 
-<p>
-<a href="education.html">  
-<img src="images/education.jpg" alt="Education" width="300">
-</a> 
-
-<a href="awards.html">  
-<img src="images/awards.jpg" alt="Awards and Recognitions" width="300">
-</a> 
- 
-</p>
-
-<p>
-<a href="projects.html">  
-<img src="images/projects.jpg" alt="Projects" width="300">
-</a> 
-
-<a href="patents.html">  
-<img src="images/patents.jpg" alt="Patents" width="300">
-</a> 
-</p>
-
-<p>
-<a href="professional.html">  
-<img src="images/professional.jpg" alt="Professional" width="300">
-</a> 
-
-<a href="books_proceedings.html">  
-<img src="images/books.jpg" alt="Books and Proceedings" width="300">
-</a> 
-</p>
-
-<p>
-<a href="journal_paper.html">  
-<img src="images/journal.jpg" alt="Journal Papers" width="300">
-</a> 
-
-<a href="conference_papers.html">  
-<img src="images/conference.jpg" alt="Conference Papers" width="300">
-</a> 
-
-
-</p>
-
-<p> Contact me: nalini dot ratha at gmail dot com </p>
+<h4> <em> If you have purther questions, please contact me: nalini dot ratha at gmail dot com </em> </h4>
+<h4>  Update on June 28, 2020     </h4>
+<h4>       </h4>
 </div>
 </body>  
 </html>
