--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@ In 2019, he won the IEEE Biometrics Council Leadership award.
 </div>
 
 <h4> <em> If you have purther questions, please contact me: nalini dot ratha at gmail dot com </em> </h4>
-<h4>  Update on June 28, 2020     </h4>
+
 <h4>       </h4>
+<h4>  Updated on June 28, 2020     </h4>
 </div>
 </body>  
 </html>
