--- a/conference_papers.html
+++ b/conference_papers.html
@@ -1,5 +1,8 @@
 <H1> Conference Papers </h1>
 <ol>
+<li> K K Sarpatwar, N Ratha, K Nandakumar, K Shanmugam, J Rayfield, S Pankanti, R Vaculin, Privacy Enhanced Decision Tree Inference, CVPR Workshop 2020 </li>
+<li> A. Agarwal, M Vatsa, R Singh, N Ratha, Noise is Inside Me! Generating Adversarial Perturbations with Noise Derived from Natural Filters, CVPR Workshop 2020 </li>
+<li> A Goel, A. Agarwal, M Vatsa, R Singh, N Ratha, DNDNet: Reconfiguring CNN for Adversarial Robustness, CVPR Workshop 2020 </li>
 <li> K Nandakumar, N Ratha, S Pankanti , Proving Multimedia Integrity using Sanitizable Signatures Recorded on Blockchain, Proceedings of the ACM Workshop on Information Hiding and Multimedia security, 2019 </li>
 <li> 	S Nagpal, M Singh, R Singh, M Vatsa, N Ratha, Deep Learning for Face Recognition: Pride or Prejudiced?, arXiv preprint arXiv:1904.01219 </li>
 <li> 	M Merler, N Ratha, RS Feris, JR Smith, Diversity in faces, arXiv preprint arXiv:1901.10436 </li>
