--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
 <div class="centered-block">
 <p>
 
-    <img  src="images/nalini_face.jpg" ALIGN="LEFT" alt="Nalini Ratha" width="150" height="150"/>
+    <img  src="images/nalini_face.jpg" ALIGN="LEFT" HSPACE="30" VSPACE="05" alt="Nalini Ratha" width="150" height="150"/>
         <h2>Summary</h2>
-       <p> Nalini K. Ratha is a Research Staff Member at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York where he lead the biometrics 
+       <p> As a Research Staff Member at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York,  Nalini K. Ratha lead the biometrics 
 research effort in the area of enhancing security of biometrics systems and performance evaluation of biometrics systems. 
-Currently, he focuses on extending the techniques to build robust and trustworthy AI systems. 
+Currently, he focuses on extending the techniques to build robust and trustworthy AI systems. Over last couple of years, he has conducted several workshops and CVPR/ECCV/ICCV on bias, blockchain and disguised faces in the wild. 
+During CVPR 2020, he is co-organizing a workshop on Trustworthy Vision Systems. He co-edited a book entitled "Domain Adaptation for Visual Understanding" published by S[ringer
+in 2020. IEEE Computer (July 2020) special issue on Blockchain has been co-edited by him. 
 He has co-edited two books entitled “Advances in Biometrics: Sensors, Algorithms and Systems” and “Automatic Fingerprint Recognition Systems” 
 published by Springer and co-authored a popular textbook entitled “A guide to Biometrics Selection and System design” published by Springer. 
 In the past, he has been associated with several leading biometrics conference starting with some of the very early biometrics conferences as 
 general co-chair of IEEE AutoID 02 and SPIE Conf. on Biometrics in Human Identification 2004, 2005, co-chair of an associated theme on biometrics 
-at ICPR 2006 and ICPR 2008 and also the co-chair of CVPR workshop on Biometrics 2006-2009, and 
-IEEE Biometrics Theory, Applications and Sytems (BTAS 07 -- BTAS 09).</p>
-        <p>More recently, he was the general co-chair of BTAs 2016 and ISAB 2017 and 2018 and program co-chair of IJCB 2020. 
-Over last couple of years, he has conducted several workshops and CVPR/ECCV/ICCV on bias, blockchain and disguised faces in the wild. 
-During CVPR 2020, he is leading a workshop on Trustworthy Vision Systems. In the past, he served on the editorial board of Pattern Recognition journal 
-and IEEE Trans. on Image Processing. He is a guest co-editor of a special issue on biometrics for IEEE Trans. on SMC-B and also for 
+at ICPR 2006 and ICPR 2008 and also the co-chair of CVPR workshop on Biometrics 2006-2012, and 
+IEEE Biometrics Theory, Applications and Sytems (BTAS 07 -- BTAS 10).</p>
+        <p>More recently, he was the general co-chair of BTAS 2016 and ISBA 2017 and 2018 and program co-chair of IJCB 2020. 
+ In the past, he served on the editorial board of Pattern Recognition journal and IEEE Trans. on Image Processing. He is a guest co-editor of a special issue on biometrics for IEEE Trans. on SMC-B and also for 
 IEEE Trans. on Information Forensics and Security. He served on the editorial board of IEEE Trans. on Pattern Analysis and Machine Intelligence 
 and IEEE Trans. on Systems, Man and Cybernetics- Part B. Recently, he is involved in co-editing a special issue on Domain Adaptation in Visual 
 Understanding (DAVU) for Pattern Recognition journal. He has received several patent awards and a “Research Division” award and an 
@@ -66,7 +66,7 @@ M. Tech in Computer science and Engineering from Indian Institute of Technology,
 ACM Distinguished Scientist.  
 </p>
 <p>
-His current research interests include biometrics, computer vision, pattern recognition and special purpose architecture for computer vision systems. 
+His current research interests include Trustworthy AI, Fairness and bias in AI and vision systems, biometrics, computer vision, pattern recognition and special purpose architecture for computer vision systems. 
 In 2019, he won the IEEE Biometrics Council Leadership award. 
 </p>
 
