--- a/books_proceedings.html
+++ b/books_proceedings.html
@@ -17,3 +17,10 @@
 <li> IEEE Biometrics Theory Applications and Systems (BTAS), Sept. 2008 (with K. Bowyer, V. Govindaraju and M. Nixon) </li>
 <li> IEEE Biometrics Theory Applications and Systems (BTAS), Sept. 2016 </li>
 </ol>
+
+<button onclick="goBack()">Go Back</button>
+
+<script>
+function goBack() {
+  window.history.back();
+}
