--- a/conference_papers.html
+++ b/conference_papers.html
@@ -98,3 +98,11 @@
 <li> 	S. H. Choi, N. K. Ratha, M. J. Chung  and D. T Rover, “Signal processing application using VHDL on Splash 2 ,” in VHDL International users’ Forum ( VIUF) Fall Conference, pp. 6.11-6,18, November, 1994. </li>
 
 </ol>
+
+<button onclick="goBack()">Go Back</button>
+
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
