--- a/education.html
+++ b/education.html
@@ -25,3 +25,10 @@
 <li>Indian Institute of Technology, Kanpur, India. M. Tech (Comp. Sc. & Engineering) </li>
 <li>Indian Institute of Technology, Kanpur, India. B. Tech (Electrical Engineering)</li>
 </ul>
+
+<button onclick="goBack()">Go Back</button>
+
+<script>
+function goBack() {
+  window.history.back();
+}
