--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
        <p> As a Research Staff Member at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York,  Nalini K. Ratha lead the biometrics 
 research effort in the area of enhancing security of biometrics systems and performance evaluation of biometrics systems. 
 Currently, he focuses on extending the techniques to build robust and trustworthy AI systems. Over last couple of years, he has conducted several workshops and CVPR/ECCV/ICCV on bias, blockchain and disguised faces in the wild. 
-During CVPR 2020, he is co-organizing a workshop on Trustworthy Vision Systems. He co-edited a book entitled "Domain Adaptation for Visual Understanding" published by S[ringer
+During CVPR 2020, he is co-organizing a workshop on Trustworthy Vision Systems. He co-edited a book entitled "Domain Adaptation for Visual Understanding" 
+published by Springer
 in 2020. IEEE Computer (July 2020) special issue on Blockchain has been co-edited by him. 
 He has co-edited two books entitled “Advances in Biometrics: Sensors, Algorithms and Systems” and “Automatic Fingerprint Recognition Systems” 
 published by Springer and co-authored a popular textbook entitled “A guide to Biometrics Selection and System design” published by Springer. 
