--- a/journal_paper.html
+++ b/journal_paper.html
@@ -18,3 +18,10 @@
 <li> N. K. Ratha, S. Chen, K. Karu and A.K. Jain, “A Real-time Matching System for Large Fingerprint Databases”, IEEE Trans. Pattern Analysis and Machine Intelligence, Vol. 18, 8, pp. 799-813, 1996.</li>
 <li> N. K. Ratha, S. Chen and A.K. Jain, “Adaptive Flow Orientation Based Feature Extraction in Fingerprint Images”, Pattern Recognition, Vol. 28, pp. 1657-1672, November 1995. </li>
 </ol>
+
+<button onclick="goBack()">Go Back</button>
+
+<script>
+function goBack() {
+  window.history.back();
+}
