--- a/patents.html
+++ b/patents.html
@@ -91,3 +91,10 @@
 <li>	US10318796B2, Age progression of subject facial image </li>
 <p>(Several more pending) </p>
  </ol>
+ 
+<button onclick="goBack()">Go Back</button>
+
+<script>
+function goBack() {
+  window.history.back();
+}
