--- a/professional.html
+++ b/professional.html
@@ -16,3 +16,10 @@
 <li> Spl. Issue on Domain Adaptation in Visual Understanding, Pattern Recognition Journal (in progress)
 <li> Spl. Issue on Blockchain, IEEE Computer (July 2020)
 </ol>
+
+<button onclick="goBack()">Go Back</button>
+
+<script>
+function goBack() {
+  window.history.back();
+}
