--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@ tr:nth-child(even) {
 }
 </style>
 <H1> Projects </h1>
-<table style="width:80%">
+<table style="width:90%">
   <tr>
     <th>Project</th>
     <th>Short Descrption</th>
@@ -132,3 +132,10 @@ tr:nth-child(even) {
 	    <tr>
   </tr>
   </table>
+  
+  <button onclick="goBack()">Go Back</button>
+
+<script>
+function goBack() {
+  window.history.back();
+}
