--- a/awards.html
+++ b/awards.html
@@ -31,3 +31,10 @@
 <li>1977 First in order of merit, Intermediate Science, Berhampur University</li>
 <li>1975-77 National Merit Scholarship, Govt. of  India</li>
 </ul>
+
+<button onclick="goBack()">Go Back</button>
+
+<script>
+function goBack() {
+  window.history.back();
+}
