--- a/projects.html
+++ b/projects.html
@@ -133,9 +133,10 @@ tr:nth-child(even) {
   </tr>
   </table>
   
-  <button onclick="goBack()">Go Back</button>
+<button onclick="goBack()">Go Back</button>
 
 <script>
 function goBack() {
   window.history.back();
 }
+</script>
