--- a/conference_papers.html
+++ b/conference_papers.html
@@ -99,10 +99,6 @@
 
 </ol>
 
-<button onclick="goBack()">Go Back</button>
-
-<script>
-function goBack() {
-  window.history.back();
-}
-</script>
+<form>
+  <input type="button" value="Go back" onclick="history.back()">
+</form>
