--- a/journal_paper.html
+++ b/journal_paper.html
@@ -19,9 +19,6 @@
 <li> N. K. Ratha, S. Chen and A.K. Jain, “Adaptive Flow Orientation Based Feature Extraction in Fingerprint Images”, Pattern Recognition, Vol. 28, pp. 1657-1672, November 1995. </li>
 </ol>
 
-<button onclick="goBack()">Go Back</button>
-
-<script>
-function goBack() {
-  window.history.back();
-}
+<form>
+  <input type="button" value="Go back" onclick="history.back()">
+</form>
