--- a/patents.html
+++ b/patents.html
@@ -92,9 +92,6 @@
 <p>(Several more pending) </p>
  </ol>
  
-<button onclick="goBack()">Go Back</button>
-
-<script>
-function goBack() {
-  window.history.back();
-}
+<form>
+  <input type="button" value="Go back" onclick="history.back()">
+</form>
