--- a/professional.html
+++ b/professional.html
@@ -17,9 +17,6 @@
 <li> Spl. Issue on Blockchain, IEEE Computer (July 2020)
 </ol>
 
-<button onclick="goBack()">Go Back</button>
-
-<script>
-function goBack() {
-  window.history.back();
-}
+<form>
+  <input type="button" value="Go back" onclick="history.back()">
+</form>
