--- a/books_proceedings.html
+++ b/books_proceedings.html
@@ -18,9 +18,6 @@
 <li> IEEE Biometrics Theory Applications and Systems (BTAS), Sept. 2016 </li>
 </ol>
 
-<button onclick="goBack()">Go Back</button>
-
-<script>
-function goBack() {
-  window.history.back();
-}
+<form>
+  <input type="button" value="Go back" onclick="history.back()">
+</form>
