--- a/education.html
+++ b/education.html
@@ -26,9 +26,6 @@
 <li>Indian Institute of Technology, Kanpur, India. B. Tech (Electrical Engineering)</li>
 </ul>
 
-<button onclick="goBack()">Go Back</button>
-
-<script>
-function goBack() {
-  window.history.back();
-}
+<form>
+  <input type="button" value="Go back" onclick="history.back()">
+</form>
