--- a/projects.html
+++ b/projects.html
@@ -133,10 +133,6 @@ tr:nth-child(even) {
   </tr>
   </table>
   
-<button onclick="goBack()">Go Back</button>
-
-<script>
-function goBack() {
-  window.history.back();
-}
-</script>
+<form>
+  <input type="button" value="Go back" onclick="history.back()">
+</form>
