--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ In 2019, he won the IEEE Biometrics Council Leadership award.
 </a> </div>
 </div>
 
-<h4> <em> If you have purther questions, please contact me: nalini dot ratha at gmail dot com </em> </h4>
+<h4> <em> If you have questions/suggestions, please contact me: nalini dot ratha at gmail dot com </em> </h4>
 
 <h4>       </h4>
 <h4>  Updated on June 28, 2020     </h4>
