--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   font-size: 30px;
 }
 </style>
+<title>Nalini Ratha</title>
 </head>
 <body>
 <div class="centered-block">
@@ -50,9 +51,8 @@ published by Springer and co-authored a popular textbook entitled “A guide to 
 In the past, he has been associated with several leading biometrics conference starting with some of the very early biometrics conferences as 
 general co-chair of IEEE AutoID 02 and SPIE Conf. on Biometrics in Human Identification 2004, 2005, co-chair of an associated theme on biometrics 
 at ICPR 2006 and ICPR 2008 and also the co-chair of CVPR workshop on Biometrics 2006-2012, and 
-IEEE Biometrics Theory, Applications and Sytems (BTAS 07 -- BTAS 10).</p>
-        <p>More recently, he was the general co-chair of BTAS 2016 and ISBA 2017 and 2018 and program co-chair of IJCB 2020. 
- In the past, he served on the editorial board of Pattern Recognition journal and IEEE Trans. on Image Processing. He is a guest co-editor of a special issue on biometrics for IEEE Trans. on SMC-B and also for 
+IEEE Biometrics Theory, Applications and Sytems (BTAS 07 -- BTAS 10). More recently, he was the general co-chair of BTAS 2016 and ISBA 2017 and 2018 and program co-chair of IJCB 2020.</p>
+        <p> In the past, he served on the editorial board of Pattern Recognition journal and IEEE Trans. on Image Processing. He is a guest co-editor of a special issue on biometrics for IEEE Trans. on SMC-B and also for 
 IEEE Trans. on Information Forensics and Security. He served on the editorial board of IEEE Trans. on Pattern Analysis and Machine Intelligence 
 and IEEE Trans. on Systems, Man and Cybernetics- Part B. Recently, he is involved in co-editing a special issue on Domain Adaptation in Visual 
 Understanding (DAVU) for Pattern Recognition journal. He has received several patent awards and a “Research Division” award and an 
